# FlixScraper-API

./: .gitignore  README.md  crud.py  database.py  exception_handlers.py  genie.py  main.py  models.py  pyproject.toml  replit.nix  schemas.py  test_data.py  utils.py  webscraper.py
static/: style.css
templates/: docs.html  error.html  index.html
