[tool.poetry]
name = "rest-api-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
werkzeug = "^1.0.1"
praw = "^7.6.1"
openai = "^0.26.4"
selenium = "^4.8.2"
beautifulsoup4 = "^4.11.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
